se modifican las clases necesarias para acomodar los errores presentados en la GUI